# openising

./: .gitignore  .gitlab-ci.yml  .nsr  .pjsetup  .setup  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ruff-formatting.yml
ising/: README.md  __init__.py  api.py  dummy_gurobi.py  typing.py
ising/benchmarks/: README.md
ising/flow/: 000.txt  BLIM_Gbenchmark.py  BLIM_test.py  Problem_parser.py  README.md  SB_multiple.py  __init__.py  benchmark_sweep.py  exhaustive_demo.py  exhaustive_solver.py  plot_benchmark_sweep.py  simulated_annealing_demo.py  solvers_benchmark.py  solvers_comparison.py  test_MIMO.py  transformation_demo.py
ising/generators/: Knapsack.py  MIMO.py  MaxCut.py  Max_cut.py  README.md  TSP.py  __init__.py  gen_random.py  rand.py  randint.py  random.py  uniform.py
ising/inputs/: README.md
ising/model/: __init__.py  binary_quadratic_model.py  ising.py
ising/netlist/: ising.template  netlister.py
ising/postprocessing/: MC_plot.py  MIMO_plot.py  TSP_plot.py  energy_plot.py  helper_functions.py  plot_all_benchmarks.py  plot_data.py  plot_solutions.py  summarize_energies.py
ising/solvers/: BRIM.py  CIM.py  DSA.py  Gurobi.py  Multiplicative.py  OIM.py  SA.py  SB.py  SCA.py  __init__.py  base.py  exhaustive.py  inSitu_SA.py  solver.py
ising/stages/: __init__.py  atsp_parser_stage.py  config_parser_stage.py  dummy_creater_stage.py  dummy_creator_stage.py  initialization_stage.py  main_stage.py  maxcut_parser_stage.py  mimo_ber_calc_stage.py  mimo_parser_stage.py  noise_stage.py  npmos_stage.py  stage.py  (+5 more)
(+210 files in other folders)
