[project]
name = "ising"
description = "Exploration into ising machines"
dynamic = ["version"]
requires-python = ">=3.12.7"

[tool.pytest.ini_options]
testpaths = "tests"
cache_dir = ".cache/pytest"

[tool.ruff]
src = ["ising", "tests"]
extend-exclude = ["ising/under_dev/"]
line-length = 120
indent-width = 4
cache-dir = ".cache/ruff"

[tool.ruff.lint]
#select = ["E4", "E7", "E9", "F"]
select = ["F", "E", "W", "UP", "PT", "TID252", "A", "PTH", "PLC", "PLE"]
ignore = ["PT", "E731"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403"]
